<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.r30_a.testlayout.TestActivity">

    <TextView
        android:id="@+id/txvhello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edtname"
        android:layout_centerHorizontal="true"
        android:text="Hello World!!"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btncheck"
        android:layout_alignStart="@+id/imgHead"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/edtname"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btncheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="check" />

    <ImageView
        android:id="@+id/imgHead"
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        app:srcCompat="@drawable/cpb_background" />
</RelativeLayout>
