...
                    android:layout_alignBottom="@+id/btnGame"
                    android:layout_alignStart="@+id/btnWave"
                    android:layout_weight="1"
                    android:text="翻轉卡片" />

                <Button
                    android:id="@+id/btnTest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
...
