...
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/colorGrayPrimaryDark"
        android:layout_marginLeft="14dp"
        />
    <TextView
        android:id="@android:id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="17sp"
        android:ellipsize="end"
        android:singleLine="true"
...
