...
                    android:text="fragment" />

                <Button
                    android:id="@+id/btn3D2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/btnAlert"
                    android:layout_alignStart="@+id/btnAlert"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="3D2" />

                <Button
...
                    android:id="@+id/btnAlert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_weight="1"
                    android:text="機器人" />

                <Button
                    android:id="@+id/btnToOpenGL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
...
